# burn-on-esp32

./: Cargo.toml  README.md  build.rs  partitions.csv
.cargo/: config.toml
