[package]
edition = "2021"
name    = "hello-world-full"
version = "0.1.0"

[[bin]]
name = "burn-on-esp32"
path = "./src/bin/async_main.rs"

[dependencies]
#burn = { git = "https://github.com/tracel-ai/burn.git", rev = "df7663e3d9529b514236cfc98a85aeec66c28f25", default-features = false, features=["ndarray"]}
burn = { version = "0.13.2", default-features = false, features=["ndarray"]}
squeezenet-burn = { git = "https://github.com/tracel-ai/models", package = "squeezenet-burn", features = ["weights_embedded", "weights_f16"], default-features = false }

esp-println = { version = "0.13.0", features = ["esp32c6", "log"] }

embassy-executor = { version = "0.7.0", features = [
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "esp32c6",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32c6", "unstable"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32c6"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false


[dev-dependencies]
# Used by the classify example
burn = { version = "0.13.0", features = ["ndarray"]  }

[build-dependencies]
# Used to generate code from ONNX model
burn-import = { version = "0.13.2", package = "burn-import" }
