[package]
edition = "2021"
name    = "hello-s3"
version = "0.1.0"

[[bin]]
name = "hello-s3"
path = "./src/bin/async_main.rs"

[dependencies]
burn = { version = "0.16.0", default-features = false, features = ["ndarray"] }
squeezenet-burn = { git = "https://github.com/tracel-ai/models",rev = "0825397d657578b65be14266a7a16d0ef4898ce2", package = "squeezenet-burn", features = ["weights_embedded", "weights_f16"], default-features = false }

critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-backtrace = { version = "0.15.0", features = [
  "esp32s3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32s3", "unstable"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32s3"] }
esp-println = { version = "0.13.0", features = ["esp32s3", "log"] }
log = { version = "0.4.21" }
static_cell = { version = "2.1.0", features = ["nightly"] }
esp-alloc = { version = "0.6.0" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[dev-dependencies]
# Used by the classify example
burn = { version = "0.16.0", features = ["ndarray"]  }
