[package]
edition = "2021"
name    = "hello-s3"
version = "0.1.0"

[[bin]]
name = "hello-s3"
path = "./src/bin/async_main.rs"

[dependencies]
burn = { version = "0.16.0", default-features = false, features = ["ndarray"] }
squeezenet-burn = { git = "https://github.com/tracel-ai/models",rev = "0825397d657578b65be14266a7a16d0ef4898ce2", package = "squeezenet-burn", features = ["weights_embedded", "weights_f16"], default-features = false }

critical-section = "1.2.0"
esp-backtrace = { version = "0.15.0", features = [
  "esp32s3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = {git = "https://github.com/esp-rs/esp-hal.git", rev = "3816de0d87f14e5029c6bbe1f0b81918fa6561be", features = ["esp32s3", "unstable", "psram"] }
esp-println = { version = "0.13.0", features = ["esp32s3", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.6.0" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[dev-dependencies]
# Used by the classify example
burn = { version = "0.16.0", features = ["ndarray"]  }
